[Fix][Lex] Changed up the colors for starship prompt

--- a/config/starship.toml
+++ b/config/starship.toml
@@ -1,18 +1,17 @@
 "$schema" = 'https://starship.rs/config-schema.json'
 
 format = """
-[╭─](fg:#646465)\
-[](fg:#556FFF)\
+[](fg:#5C74FF)\
 $os\
 $username\
-[](bg:#1D1F28 fg:#556FFF)\
+[](bg:#22252F fg:#5C74FF)\
 $directory\
-[](fg:#1D1F28 bg:#556FFF)\
+[](fg:#22252F bg:#5C74FF)\
 $git_branch\
 $git_status\
-[](fg:#556FFF bg:#3FDCEE)\
+[](fg:#5C74FF bg:#85EADB)\
 $docker_context\
-[](fg:#3FDCEE bg:#4D6D8E)\
+[](fg:#85EADB bg:#7D86A1)\
 $c\
 $elixir\
 $elm\
@@ -25,15 +24,18 @@ $nodejs\
 $nim\
 $rust\
 $scala\
-[](fg:#4D6D8E bg:#1D1F28)\
+[](fg:#7D86A1 bg:#22252F)\
 $time\
-[ ](fg:#1D1F28)\
-\n[╰─](fg:#646465) """
+$character"""
+
+[character]
+success_symbol = "[](fg:#22252F bg:#5C74FF)[  ](bg:#5C74FF)[](fg:#5C74FF)\n[❯](fg:#8597FF)"
+error_symbol = "[](fg:#22252F bg:#FB3741)[  ](bg:#FB3741)[](fg:#FB3741)\n[❯](fg:#FC737A)"
 
 [username]
 show_always = true
-style_user = "bg:#556FFF"
-style_root = "bg:#556FFF"
+style_user = "bg:#5C74FF"
+style_root = "bg:#5C74FF"
 format = '[🎉 $user ]($style)'
 
 [os]
@@ -41,86 +43,85 @@ disabled = true
 style = "bg:#C574DD"
 
 [directory]
-style = "bg:#1D1F28"
+style = "bg:#22252F"
 format = "[ $path ]($style)"
 truncation_length = 1
 
 [c]
 symbol = ""
-style = "bg:#4D6D8E"
+style = "bg:#7D86A1"
 format = '[ $symbol ($version) ]($style)'
 
 [docker_context]
 symbol = ""
-style = "bg:#3FDCEE"
+style = "bg:#85EADB"
 format = '[ $symbol $context ]($style) $path'
 
 [elixir]
 symbol = ""
-style = "bg:#4D6D8E"
+style = "bg:#7D86A1"
 format = '[ $symbol ($version) ]($style)'
 
 [elm]
 symbol = ""
-style = "bg:#4D6D8E"
+style = "bg:#7D86A1"
 format = '[ $symbol ($version) ]($style)'
 
 [git_branch]
 symbol = ""
-style = "bg:#556FFF"
+style = "bg:#5C74FF"
 format = '[ $symbol $branch ]($style)'
 
 [git_status]
-style = "bg:#556FFF"
+style = "bg:#5C74FF"
 format = '[$all_status$ahead_behind ]($style)'
 
 [golang]
 symbol = ""
-style = "bg:#4D6D8E"
+style = "bg:#7D86A1"
 format = '[ $symbol ($version) ]($style)'
 
 [gradle]
-style = "bg:#4D6D8E"
+style = "bg:#7D86A1"
 format = '[ $symbol ($version) ]($style)'
 
 [haskell]
 symbol = ""
-style = "bg:#4D6D8E"
+style = "bg:#7D86A1"
 format = '[ $symbol ($version) ]($style)'
 
 [java]
 symbol = ""
-style = "bg:#4D6D8E"
+style = "bg:#7D86A1"
 format = '[ $symbol ($version) ]($style)'
 
 [julia]
 symbol = ""
-style = "bg:#4D6D8E"
+style = "bg:#7D86A1"
 format = '[ $symbol ($version) ]($style)'
 
 [nodejs]
 symbol = ""
-style = "bg:#4D6D8E"
+style = "bg:#7D86A1"
 format = '[ $symbol ($version) ]($style)'
 
 [nim]
 symbol = "󰆥"
-style = "bg:#4D6D8E"
+style = "bg:#7D86A1"
 format = '[ $symbol ($version) ]($style)'
 
 [rust]
 symbol = ""
-style = "bg:#4D6D8E"
+style = "bg:#7D86A1"
 format = '[ $symbol ($version) ]($style)'
 
 [scala]
 symbol = ""
-style = "bg:#4D6D8E"
+style = "bg:#7D86A1"
 format = '[ $symbol ($version) ]($style)'
 
 [time]
 disabled = false
 time_format = "%R" # Hour:Minute Format
-style = "bg:#1D1F28"
+style = "bg:#22252F"
 format = '[ ⏱  $time ]($style)'
-
