--- a/config/starship.toml
+++ b/config/starship.toml
@@ -124,4 +124,4 @@ format = '[ $symbol ($version) ]($style)'
 disabled = false
 time_format = "%R" # Hour:Minute Format
 style = "bg:#22252F"
-format = '[ ⏱  $time ]($style)'
+format = '[ ⌚ $time ]($style)'
