--- a/config/wt-settings.json
+++ b/config/wt-settings.json
@@ -109,7 +109,7 @@
   ],
   "profiles": {
     "defaults": {
-      "antialiasingMode": "cleartype",
+      "antialiasingMode": "grayscale",
       "colorScheme": "lovelace",
       "compatibility.reloadEnvironmentVariables": true,
       "cursorShape": "filledBox",
@@ -117,7 +117,7 @@
         "cellHeight": "1.4",
         "face": "JetBrainsMono Nerd Font",
         "size": 12.0,
-        "weight": "semi-bold"
+        "weight": "medium"
       },
       "historySize": 12000,
       "intenseTextStyle": "bright",
